<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hitheshReddivariC.crisis.Configure" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <EditText
                android:id="@+id/customMessage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="90dp"
                android:hint="@string/custom_message"
                android:textSize="22sp"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:background="@color/rounded_container_bg"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:text="@string/save"/>
        </LinearLayout>
        <TextView
            android:id="@+id/current_message"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_message"
            android:visibility="visible"
            android:padding="10dp" />

    </LinearLayout>
        

    
    
    
    


    <LinearLayout
        android:id="@+id/refresh_match_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_view_rounded_single"
        android:orientation="vertical"
        android:visibility="gone" >
 
        <TextView
            android:id="@+id/fall_treshold_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fall_treshold"
            android:textColor="#ffffff"
            android:textSize="20sp" />
 
        <SeekBar
            android:id="@+id/treshold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"
            android:max="100"
            android:progressDrawable="@drawable/progressbar"
            android:secondaryProgress="0" />
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="12" >
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/twenty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/forty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/sixty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/eighty"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/hundred"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">
        <RadioGroup 
            android:id="@+id/treshold_defaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <RadioButton 
                android:id="@+id/default_tresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_tresh"/>
            <RadioButton 
                android:id="@+id/osteoporosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osteoporosis"/>
            <RadioButton 
                android:id="@+id/above60M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/above60M"/>
            <RadioButton 
                android:id="@+id/above60F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/above60F"/>
            <RadioButton 
                android:id="@+id/young"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/young"/>
            <RadioButton 
                android:id="@+id/osteopenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osteopenia"/>
            <RadioButton 
                android:id="@+id/less12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less12"/>
            <RadioButton 
                android:id="@+id/fractured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_fracture"/>
            <RadioButton 
                android:id="@+id/car_crash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_crash"/>

        </RadioGroup>
    </ScrollView>
    
</LinearLayout>
